Prevent edges showing on mobile

--- a/main.css
+++ b/main.css
@@ -11,10 +11,10 @@ body {
 
 .stripes {
   position: absolute;
-  top: -100%;
-  bottom: -100%;
-  left: -100%;
-  right: -100%;
+  top: -200%;
+  bottom: -200%;
+  left: -200%;
+  right: -200%;
 }
 
 .one   { animation: spin  30s linear infinite; }
